--- a/requirements.txt
+++ b/requirements.txt
@@ -48,4 +48,5 @@ x-clip
 x_transformers==1.0.4
 
 # bitsandbytes
-bitsandbytes==0.35.0
+bitsandbytes==0.35.0 ; platform_system == "Windows"
+bitsandbytes ; platform_system != "Windows"
