--- a/requirements.txt
+++ b/requirements.txt
@@ -1,52 +1,39 @@
-# Fundamentals
-numpy
-pyyaml
-tb-nightly
-future
-scp
-tqdm
-matplotlib
-scipy
-munch
-tqdm
-scp
-tensorboard
-orjson
-einops
-lambda-networks
-mup
-
-# For image generation stuff
-opencv-python
-kornia
-pytorch_ssim
-gsa-pytorch
-pytorch_fid
-
-# For audio generation stuff
-inflect
-librosa
-Unidecode
-tgt
-pyworld
-audio2numpy
-SoundFile
-
-# For text stuff
+audio2numpy==0.1.2
+numpy==1.23.5
+tb-nightly==2.16.0a20231221
+future==0.18.3
+scp==0.14.5
+tqdm==4.66.1
+matplotlib==3.7.1
+matplotlib-inline==0.1.6
+matplotlib-venn==0.11.9
+scipy==1.11.4
+munch==4.0.0
+tqdm==4.66.1
+scp==0.14.5
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
+orjson==3.9.10
+einops==0.7.0
+lambda-networks==0.4.0
+mup==1.0.0
+opencv-python==4.8.0.76
+opencv-python-headless==4.8.1.78
+kornia==0.7.0
+gsa-pytorch==0.2.2
+inflect==7.0.0
+librosa==0.8.1
+torchlibrosa==0.1.0
+Unidecode==1.3.7
+tgt==1.5
+pyworld==0.3.4
+audio2numpy==0.1.2
 transformers
-tokenizers
-jiwer  # calculating WER
-omegaconf
-
-# lucidrains stuff
-vector_quantize_pytorch
-linear_attention_transformer
-rotary-embedding-torch
-axial_positional_embedding
-g-mlp-pytorch
-x-clip
-x_transformers==1.0.4
-
-# bitsandbytes
-bitsandbytes==0.35.0 ; platform_system == "Windows"
-bitsandbytes ; platform_system != "Windows"
+x-transformers==1.0.4
+tokenizers==0.12.1
+jiwer==3.0.3
+omegaconf==2.3.0
+rotary-embedding-torch==0.4.0
+g-mlp-pytorch==0.1.5
+x-clip==0.14.4
+bitsandbytes==0.41.3.post2
